<resources>
    <string name="app_name">CryptoInfoFinal</string>

    <string name="naoexiste">Não existe esse utilizador!</string>
    <string name="passErrada">Palavra-Passe Errada!</string>
    <string name="campoutilizador">Campo Utilizador vazio</string>
    <string name="campopassword">Campo Password vazio</string>
    <string name="Problemas">Problemas</string>

    <string name="preference_file_key" translatable="false">file1</string>
    <string name="button" translatable="false">false</string>
    <string name="username" translatable="false">username</string>
    <string name="password" translatable="false">password</string>
    <string name="guardar_utilizador">Guardar utilizador</string>
    <string name="inserir_username">Inserir Username</string>
    <string name="inserir_password">Inserir Password</string>
    <string name="converter">Converter</string>
    <string name="de">De:</string>


    <string-array name="array_currency_codes">
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>AWG</item>
        <item>AZN</item>
        <item>BAM</item>
        <item>BBD</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BMD</item>
        <item>BND</item>
        <item>BOB</item>
        <item>BOV</item>
        <item>BRL</item>
        <item>BSD</item>
        <item>BTN</item>
        <item>BWP</item>
        <item>BYR</item>
        <item>BZD</item>
        <item>CAD</item>
        <item>CDF</item>
        <item>CHE</item>
        <item>CHF</item>
        <item>CHW</item>
        <item>CLF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>COU</item>
        <item>CRC</item>
        <item>CUC</item>
        <item>CUP</item>
        <item>CVE</item>
        <item>CZK</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>DOP</item>
        <item>DZD</item>
        <item>EGP</item>
        <item>ERN</item>
        <item>ETB</item>
        <item>EUR</item>
        <item>FJD</item>
        <item>FKP</item>
        <item>GBP</item>
        <item>GEL</item>
        <item>GHS</item>
        <item>GIP</item>
        <item>GMD</item>
        <item>GNF</item>
        <item>GTQ</item>
        <item>GYD</item>
        <item>HKD</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HTG</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>ISK</item>
        <item>JMD</item>
        <item>JOD</item>
        <item>JPY</item>
        <item>KES</item>
        <item>KGS</item>
        <item>KHR</item>
        <item>KMF</item>
        <item>KPW</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>KYD</item>
        <item>KZT</item>
        <item>LAK</item>
        <item>LBP</item>
        <item>LKR</item>
        <item>LRD</item>
        <item>LSL</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>MDL</item>
        <item>MGA</item>
        <item>MKD</item>
        <item>MMK</item>
        <item>MNT</item>
        <item>MOP</item>
        <item>MRO</item>
        <item>MUR</item>
        <item>MVR</item>
        <item>MWK</item>
        <item>MXN</item>
        <item>MXV</item>
        <item>MYR</item>
        <item>MZN</item>
        <item>NAD</item>
        <item>NGN</item>
        <item>NIO</item>
        <item>NOK</item>
        <item>NPR</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PAB</item>
        <item>PEN</item>
        <item>PGK</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>RUB</item>
        <item>RWF</item>
        <item>SAR</item>
        <item>SBD</item>
        <item>SCR</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SHP</item>
        <item>SLL</item>
        <item>SOS</item>
        <item>SRD</item>
        <item>SSP</item>
        <item>STD</item>
        <item>SVC</item>
        <item>SYP</item>
        <item>SZL</item>
        <item>THB</item>
        <item>TJS</item>
        <item>TMT</item>
        <item>TND</item>
        <item>TOP</item>
        <item>TRY</item>
        <item>TTD</item>
        <item>TWD</item>
        <item>TZS</item>
        <item>UAH</item>
        <item>UGX</item>
        <item>USD</item>
        <item>USN</item>
        <item>UYI</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VEF</item>
        <item>VND</item>
        <item>VUV</item>
        <item>WST</item>
        <item>XAF</item>
        <item>XAG</item>
        <item>XAU</item>
        <item>XBA</item>
        <item>XBB</item>
        <item>XBC</item>
        <item>XBD</item>
        <item>XCD</item>
        <item>XDR</item>
        <item>XOF</item>
        <item>XPD</item>
        <item>XPF</item>
        <item>XPT</item>
        <item>XSU</item>
        <item>XTS</item>
        <item>XUA</item>
        <item>XXX</item>
        <item>YER</item>
        <item>ZAR</item>
        <item>ZMW</item>
        <item>ZWL</item>
    </string-array>
    <string name="title_activity_teste" translatable="false">teste</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="Moedas">Moedas</string>
    <string name="my_account">A minha conta</string>
    <string name="home" translatable="false">Home</string>
    <string name="noticias">Notícias</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="Bemvindo">Bem Vindo</string>
    <string name="Conversor">Conversor</string>
    <string name="resultado">Resultado:</string>
    <string name="para">Para:</string>
    <string name="pre_o">Preço:</string>
    <string name="simbolo">Simbolo:</string>
    <string name="moedasfavoritas">Moedas favoritas</string>
    <string name="tutBemvindo">Bem vindo á CryptoInfo</string>
    <string name="tutdescBv">Antes de prosseguirmos vamos começar com um pequeno tutorial das cryptocurrências.</string>
    <string name="tut2">CryptoMoedas são moedas digitais que utilizam a criptografia como segurança dos dados bem como criar novas unidades e fazer transações.</string>
    <string name="tut3">A diferença entre dinheiro comum é que possui a descentralização, anonimato e baixo custo.</string>
    <string name="tut4">Nesta aplicação poderás ver várias informações de diferentes cryptomoedas tais como os seus valores em tempo real em todo o tipo de moeda existente do mundo.</string>
    <string name="tut5">Noticias</string>
    <string name="tut6">Tudo pronto !</string>
    <string name="tutdescfinal">Este tutorial encontra-se disponivel nas definições sempre que necessites de rever</string>
    <string name="tutNav">Tutorial</string>
    <string name="tut5desc">Acede ao menu noticias caso queiras aprender tudo sobre a atualidade do mundo das cryptomoedas !</string>

</resources>