<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/novo_gradiente"
    android:id="@+id/drawerLayout">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoedaInfo">


    <ImageView
        android:id="@+id/LogoMoeda"
        android:layout_width="135dp"
        android:layout_height="133dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="115dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="103dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:fontFamily="@font/doppio_one"
        android:text="@string/simbolo"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/symbol"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/doppio_one"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/Price"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:fontFamily="@font/doppio_one"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="87dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="155dp"
        android:layout_marginRight="155dp"
        android:fontFamily="@font/doppio_one"
        android:text="@string/pre_o"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/te"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:fontFamily="@font/doppio_one"
        android:text="€"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/NameMoeda"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="538dp"
        android:fontFamily="@font/doppio_one"
        android:text="kekw"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/favorito"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="609dp"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintBottom_toTopOf="@+id/recyclermarker"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imgmenu2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="337dp"
        android:layout_marginRight="337dp"
        android:layout_marginBottom="607dp"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintBottom_toTopOf="@+id/recyclermarker"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/conversor"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="54dp"
        android:text="@string/converter" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:fillViewport="true"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chartView"

                android:layout_width="3000dp"
                android:layout_height="300dp"

                android:layout_margin="5dp" />

        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>
    <include layout="@layout/nav_drawer"></include>
</androidx.drawerlayout.widget.DrawerLayout>